--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
             <div id="score">Score: 0</div>
             <div id="highScore">High Score: 0</div>
             <div id="gameOver">
-                Game Over!
-                <button id="restartBtn">Restart</button>
-            </div>
+    			Game Over!
+    
+    			<div id="rankDisplay" style="font-size: 18px; margin-top: 10px;"></div>
+    
+    			<button id="restartBtn">Restart</button>
+			</div>
             <canvas id="gameCanvas" width="500px" height="300px">캔바스가 지원되지 않습니다.</canvas>
         </div>
 		<script src="game.js"></script>
